All content added, cleaned up 5/25 chapters

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@ According to my research, all of these books are in the public domain in the US.
 </details>
 
 <details>
+    <summary><em>Social Problems</em> by Henry George (1883)</summary>
+    <p><a href="books/social-problems/">Read online</a></p>
+    <p><a href="books/social-problems.pdf">Download PDF</a></p>
+    <p><a href="books/social-problems.epub">Download ePub</a></p>
+    <p><a href="books/social-problems.mobi">Download mobi</a></p>
+</details>
+
+<details>
     <summary><em>Christianity and Patriotism</em> by Leo Tolstoy (1894)</summary>
     <p><a href="books/christianity-patriotism/">Read online</a></p>
     <p><a href="books/christianity-patriotism.pdf">Download PDF</a></p>
