Publish "A Guildman's Interpretation of History" by Arthur Penty

--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@ According to my research, all of these books are in the public domain in the US.
 </details>
 
 <details>
+    <summary><em>A Guildsman's Interpretation of History</em> by Arthur Penty (1920)</summary>
+    <p><a href="books/guildsman-history/">Read online</a></p>
+    <p><a href="books/guildsman-history.pdf">Download PDF</a></p>
+    <p><a href="books/guildsman-history.epub">Download ePub</a></p>
+    <p><a href="books/guildsman-history.mobi">Download mobi</a></p>
+</details>
+
+<details>
     <summary><em>Economic Democracy</em> by C. H. Douglas (1920)</summary>
     <p><a href="books/economic-democracy/">Read online</a></p>
     <p><a href="books/economic-democracy.pdf">Download PDF</a></p>
