Make books list dynamic, clean up home page, add poll

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 
 <h2>Welcome to my digital library!</h2>
 
-According to my research, all of these books are in the public domain in the US. Click on one of the titles below to see viewing options. If you have an author or title you'd like to see made available, <a href="/about/">contact me</a>.
+According to my research, all of these books are in the public domain in the US. Click on one of the titles below to see viewing options.
 
 <hr>
