Add categories to better make sense of the large amount of books

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Home
 
 <h2>Welcome to my digital library!</h2>
 
-If you're interested in finding digital copies of classic distributist and non-resistant texts, you're in the right place! Click on one of the links to see viewing options.
+If you're interested in finding digital copies of texts about non-resistance, classic distributism, guild distributism, and more, you're in the right place! Click on one of the links to see viewing options.
 
 <hr>
